	* Incremented the package version to 1.0.0.
2021-05-13 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'make deb' target.
2021-05-13 Fred Gleason <fredg@paravelsystems.com>
	* Added 'postinst', 'postrm' and 'prerm' scripts to the deb
	package.
	* Updated the package description.
2022-09-26 Fred Gleason <fredg@paravelsystems.com>
	* Modified the build system to automatically supply the correct
	package versioning for the 'make deb' target.
2022-09-26 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 1.0.1.
2025-02-06 Fred Gleason <fredg@paravelsystems.com>
	* Added a vncmon(1) applet.
2025-02-06 Fred Gleason <fredg@paravelsystems.com>
	* Added Exemplar v2.0.1.
	* Added support for a vncmon.conf(5) file in '/etc/vncmon.conf'.
2025-02-07 Fred Gleason <fredg@paravelsystems.com>
	* Integrated x11vnc v0.9.16ea1 into the build.
2025-02-07 Fred Gleason <fredg@paravelsystems.com>
	* Added support for a tray applet using the XFCE4 'Genmon' plug-in.
2025-02-07 Fred Gleason <fredg@paravelsystems.com>
	* Added a set of icons for the XFCE plug-in.
2025-02-12 Fred Gleason <fredg@paravelsystems.com>
	* Composed the contents of 'INSTALL'.
	* Added a 'Config' class for vncmon(1).
	* Added code to allow vncmon(1) to be auto-started by the genmon
	plug-in.
	* Removed the external 'x11vnc' dependency from the DEB package.
2025-02-12 Fred Gleason <fredg@paravelsystems.com>
	* Added 'INSTALL' to the documentation directory in the DEB
	package.
	* Removed icons from the theme database.
2025-02-12 Fred Gleason <fredg@paravelsystems.com>
	* Added a window icon to vncmon(1).
2025-02-13 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 2.0.0rc0.
2025-02-13 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'xfce4-genmon-plugin' dependency to the DEB package.
	* Added a 'qt6-qpa-plugins' dependency to the DEB package.
2025-02-13 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 2.0.0rc1.