@@ -72,3 +72,5 @@
 	* Added a 'qt6-qpa-plugins' dependency to the DEB package.
 2025-02-13 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the package version to 2.0.0rc1.
+2025-02-13 Fred Gleason <fredg@paravelsystems.com>
+	* Refactored vncmon(1) to allow dynamic updating of configuration.
